# tzBJC

./: .gitignore  CLI.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pypi-publish.yml  testpypi-publish.yml
docs/: index.html  search.js  tzBJC.html
docs/tzBJC/: cli.html  core.html  gui.html
src/tzBJC/: _version.py  cli.py  core.py  gui.py
tests/: test_cli.py  test_core.py  test_gui.py  test_gui_decode.py  test_gui_decode_input_error.py  test_gui_drag_and_drop.py  test_gui_encode_input_error.py  test_gui_encode_text_clipboard.py  test_gui_toggle_output_mode.py
