[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tzBJC"
version = "0.1.0"
description = "Convert binary files to signed JSON and back."
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.8"

# Runtime dependencies
dependencies = [
  "PySide6==6.9.0",
  "PySide6_Addons==6.9.0",
  "PySide6_Essentials==6.9.0",
  "zstandard==0.23.0"
]

[project.optional-dependencies]
dev = [
  "coverage==7.8.0",
  "invoke==2.2.0",
  "pytest==8.3.5",
  "pytest-cov==6.1.1"
]

[project.scripts]
tzBJC-cli = "tzBJC.cli:main"
tzBJC-gui = "tzBJC.gui:main"
