[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tzBJC"
version = "0.1.0"
description = "Convert binary files to signed JSON and back, with zstd compression."
authors = [{name = "Matthew Craig", email = "taggedzi.mpc@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "PySide6==6.9.0",
  "PySide6_Addons==6.9.0",
  "PySide6_Essentials==6.9.0",
  "zstandard==0.23.0"
]

keywords = ["json", "binary", "zstandard", "cli", "gui", "compression"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: X11 Applications :: Qt",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/taggedzi/tzBJC"

[project.optional-dependencies]
dev = [
  "coverage==7.8.0",
  "invoke==2.2.0",
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "pytest-qt==4.4.0"
]

[project.scripts]
tzBJC-cli = "tzBJC.cli:main"
tzBJC-gui = "tzBJC.gui:main"
