[build-system]
requires = [ "setuptools>=77.0.0",]
build-backend = "setuptools.build_meta"

[project]
name = "tzBJC"
version = "0.2.12"
description = "Convert binary files to signed JSON and back, with zstd compression."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = [ "json", "binary", "converter", "zstandard", "cli", "gui", "library", "compression",]
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent", "Development Status :: 4 - Beta", "Environment :: Console", "Environment :: X11 Applications :: Qt", "Topic :: Utilities",]
dependencies = [ "PySide6==6.9.0", "PySide6_Addons==6.9.0", "PySide6_Essentials==6.9.0", "zstandard==0.23.0",]
[[project.authors]]
name = "Matthew Craig"
email = "taggedzi.mpc@gmail.com"

[project.optional-dependencies]
dev = [ "coverage==7.8.0", "invoke==2.2.0", "pdoc-15.0.3", "pytest==8.3.5", "pytest-cov==6.1.1", "pytest-qt==4.4.0", "toml==0.10.2",]

[project.scripts]
tzBJC-cli = "tzBJC.cli:main"
tzBJC-gui = "tzBJC.gui:main"

[project.urls]
Homepage = "https://github.com/taggedzi/tzBJC"
